[package]
name = "touka"
version = "0.3.3"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Making the image background transparent."
readme = "README.md"
repository = "https://github.com/moisutsu/touka"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.5"
clap = "2.33.1"
yaml-rust = "0.4"
imboard = "0.2.5"
anyhow = "1.0.32"
tokio = { version = "0.2.22", features = ["full"] }
