[package]
name = "touka"
version = "0.3.5"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2021"
license = "MIT"
description = "This is a command-line tool for making image backgrounds transparent"
readme = "README.md"
repository = "https://github.com/moisutsu/touka"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.5"
yaml-rust = "0.4"
imboard = "0.2.5"
anyhow = "1.0.32"
tokio = { version = "0.2.22", features = ["full"] }
clap = { version = "3.0.0", features = ["derive"] }
itertools = "0.10.1"
